# projects

./: .clang_complete  .dir-locals.el  .gitignore  .gitmodules  BST.cpp  BST.h  CMakeLists.txt  Node.hh  RB-node.hh  README.md  TODO.org  a_star.cpp  basic_btree.hh  binary_trees.cpp  c_array.cpp  c_array.hh  cat.cpp  cat.hh  customer.cpp  customer.hh  customers_order.cpp  customers_order.hh  dog.cpp  dog.hh  factor.hh  freq.cpp  freq.hh  generic.hh  get_path.cpp  get_path.hh  graph.hh  hash_example.cpp  hash_table.cpp  hash_table.hh  hashes.cpp  hashes.hh  heap.cpp  heap.hh  huffman.cpp  lab3_prb1.cpp  (+28 more)
asm/: hello.asm  max_subarray.c
homework/: customer.cpp  matrix.cpp  product.hh  product_stats.hh  products_order.cpp  products_order.hh  shop.cpp
input/: 31.txt  43_deleted_edges.txt  43_edges.txt  43_nodes.txt  huff.txt  in.txt  inventory.txt  rand_strings.txt  shoppings.txt
oz/: difflist.oz  ex1_5.oz  ex1_6.oz  queue.oz
see/c/: base.h  buf.c  buf.h  interval.h  list.c  memory.c  memory.h  meson.build  req.c  req.h  test-base.c  test_req.c
see/c/builddir/: .ninja_deps  .ninja_log  buf  build.ninja  compile_commands.json  main
see/c/builddir/meson-logs/: meson-log.txt
see/doc/network-tut/: example.c  hello.c  ip  structs.h
